添加搜尋引擎預覽

--- a/index.html
+++ b/index.html
@@ -4,7 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dalamud的各種研究筆記">
+    <meta name="keywords" content="FF14,Dalamud,FF14插件">
+    <meta name="author" content="BigYo">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://magejiaaa.github.io/Amaurot_garden/">
+    <meta property="og:title" content="亞馬烏羅提後花園">
+    <meta property="og:description" content="Dalamud的各種研究筆記">
+    <meta property="og:image" content="blob:https://imgur.com/c991395e-7fd6-4ec6-99aa-932899aae2fb">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://magejiaaa.github.io/Amaurot_garden/">
+    <meta property="twitter:title" content="亞馬烏羅提後花園">
+    <meta property="twitter:description" content="Dalamud的各種研究筆記">
+    <meta property="twitter:image" content="blob:https://imgur.com/c991395e-7fd6-4ec6-99aa-932899aae2fb">
+
+    
     <title>亞馬烏羅提後花園</title>
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -56,6 +72,9 @@
                     <img src="image/xl install 02.jpg"
                         class="img-fluid border rounded-3 mb-3" alt="" loading="lazy">
                     <p class="col-lg-8 mb-5 mx-auto">選擇包含game和boot的遊戲路徑，他不會自動幫你偵測，有安裝在D槽的人記得更改路徑，steam版本要勾選下面選項，剩下基本上一直下一步就好。</p>
+                    <img src="image/xl install 03.jpg"
+                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy">
+                    <p class="col-lg-8 mb-5 mx-auto">紅框處可以記憶其他帳號，如果勾選自動登入，Loading畫面按住Shift即可</p>
                 </div>
             </div>
         </div>
