--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
     <meta name="description" content="Dalamud的各種研究筆記">
     <meta name="keywords" content="FF14,Dalamud,FF14插件">
     <meta name="author" content="BigYo">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://magejiaaa.github.io/Amaurot_garden/">
     <meta property="og:title" content="亞馬烏羅提後花園">
     <meta property="og:description" content="Dalamud的各種研究筆記">
-    <meta property="og:image" content="blob:https://imgur.com/c991395e-7fd6-4ec6-99aa-932899aae2fb">
+    <meta property="og:image" content="https://i.imgur.com/tcf5eaU.png">
+    <meta property="og:site_name" content="亞馬烏羅提後花園">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://magejiaaa.github.io/Amaurot_garden/">
     <meta property="twitter:title" content="亞馬烏羅提後花園">
     <meta property="twitter:description" content="Dalamud的各種研究筆記">
-    <meta property="twitter:image" content="blob:https://imgur.com/c991395e-7fd6-4ec6-99aa-932899aae2fb">
+    <meta property="twitter:image" content="https://i.imgur.com/tcf5eaU.png">
 
-    
+    <link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon">
     <title>亞馬烏羅提後花園</title>
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -33,8 +36,8 @@
     <!-- 內容 -->
     <div class="container">
         <div class="row">
-            <div class="px-4 pt-2 my-5 text-center border-bottom">
-                <h1 class="display-4 fw-bold">Dalamud</h1>
+            <div class="px-4 pt-5 my-2 text-center ">
+                <h1 class="display-4 mt-5 fw-bold">Dalamud</h1>
                 <div class="col-lg-8 mx-auto">
                     <p class="lead mb-4">所有插件的基底，功能包含快速啟動與更新、第三方插件管理、記憶多組帳號密碼、上傳交易板價格資料至Universalis等多項功能</p>
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-2">
@@ -61,25 +64,55 @@
                         loading="lazy">
                 </div>
             </div>
-            <div class="px-4 mb-2 text-center">
-                <div class="col-lg-12 mx-auto">
-                    <h4 class="fw-bold">免責聲明</h4>
-                    <p class="mb-5">您已知 XIVLauncher 並不符合 Square Enix 的服務條款。使用後果需自行負責。</p>
-                    <h4 class="fw-bold">安裝說明</h4>
-                    <img src="image/xl install 01.jpg"
-                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy">
-                    <p class="col-lg-8 mb-5 mx-auto">點擊連結後再點選最上面日期的紅框處exe檔案，安裝，有跳出更新視窗確定即可。</p>
-                    <img src="image/xl install 02.jpg"
-                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy">
-                    <p class="col-lg-8 mb-5 mx-auto">選擇包含game和boot的遊戲路徑，他不會自動幫你偵測，有安裝在D槽的人記得更改路徑，steam版本要勾選下面選項，剩下基本上一直下一步就好。</p>
-                    <img src="image/xl install 03.jpg"
-                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy">
-                    <p class="col-lg-8 mb-5 mx-auto">紅框處可以記憶其他帳號，如果勾選自動登入，Loading畫面按住Shift即可</p>
+
+            <div class="accordion col-lg-10 mx-auto pb-5" id="accordionExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                            安裝說明
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <div class="mx-auto text-center">
+                                <a href="image/xl install 01.jpg" target="_blank"><img src="image/xl install 01.jpg" class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a>
+                                <p class="mb-5 mx-5">點擊連結後再點選最上面日期的紅框處exe檔案，安裝，有跳出更新視窗確定即可。</p>
+                                <a href="image/xl install 02.jpg" target="_blank"><img src="image/xl install 02.jpg" class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a>
+                                <p class="mb-5 mx-5">
+                                    選擇包含game和boot的遊戲路徑，他不會自動幫你偵測，有安裝在D槽的人記得更改路徑，steam版本要勾選下面選項，剩下基本上一直下一步就好。</p>
+                                <a href="image/xl install 03.jpg" target="_blank"><img src="image/xl install 03.jpg" class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a> 
+                                <p class="mb-5 mx-5">紅框處可以記憶其他帳號，如果勾選自動登入，Loading畫面按住Shift即可</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            遊戲內設定
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <div class="mx-auto text-center">
+                                <p class="mx-5">一般設定</p>
+                                <a href="image/xl setting 01.jpg" target="_blank"><img src="image/xl setting 01.jpg" class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a>
+                                <p class="mx-5">外觀設定</p>
+                                <a href="image/xl setting 02.jpg" target="_blank"><img src="image/xl setting 02.jpg" class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a>
+                                <p class="mx-5">後面兩個一個是頂部的bar，遊戲內可使用"/xldev"呼叫出一個頂部控制bar，最後一個標籤是使用正在測試中未上架的插件。</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
+    <!-- footer -->
+    <script src="footer.js"></script>
 
     <!-- JS插件 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
