--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
 
-            <div class="accordion col-lg-10 mx-auto pb-5" id="accordionExample">
+            <div class="accordion col-lg-10 mx-auto pb-5" data-mdb-toggle="animation" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
