--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<script src="headtitle.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Dalamud的各種研究筆記">
+    <meta name="keywords" content="FF14,Dalamud,FF14插件">
+    <meta name="author" content="BigYo">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://magejiaaa.github.io/Amaurot_garden/">
+    <meta property="og:title" content="亞馬烏羅提後花園">
+    <meta property="og:description" content="Dalamud的各種研究筆記">
+    <meta property="og:site_name" content="亞馬烏羅提後花園">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://magejiaaa.github.io/Amaurot_garden/">
+    <meta property="twitter:title" content="亞馬烏羅提後花園">
+    <meta property="twitter:description" content="Dalamud的各種研究筆記">
+    <meta property="twitter:image" content="https://i.imgur.com/tcf5eaU.png">
+    <link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="css/all.css" rel="stylesheet">
+    <title>亞馬烏羅提後花園</title>
+    <!-- CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+</head>
 
 <body>
     <!-- header -->
@@ -31,7 +58,7 @@
                         國際服需至github下載，且插件功能不支援中文化後的國際服
                     </div>
                 </div>
-                <div class="container px-sm-5" data-aos="fade-in" >
+                <div class="container px-sm-5" data-aos="fade-in">
                     <img src="https://raw.githubusercontent.com/goatcorp/FFXIVQuickLauncher/master/misc/screenshot.png"
                         class="img-fluid border rounded-3 shadow mb-5" alt="登陸器介面" width="700" height="500"
                         loading="lazy">
@@ -50,12 +77,15 @@
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
                             <div class="mx-auto text-center">
-                                <a href="image/xl install 01.jpg" target="_blank"><img src="image/xl install 01.jpg" class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="600"></a>
+                                <a href="image/xl install 01.jpg" target="_blank"><img src="image/xl install 01.jpg"
+                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="600"></a>
                                 <p class="mb-5 mx-5">點擊連結後再點選最上面日期的紅框處exe檔案，安裝，有跳出更新視窗確定即可。</p>
-                                <a href="image/xl install 02.jpg" target="_blank"><img src="image/xl install 02.jpg" class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a>
+                                <a href="image/xl install 02.jpg" target="_blank"><img src="image/xl install 02.jpg"
+                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a>
                                 <p class="mb-5 mx-5">
                                     選擇包含game和boot的遊戲路徑，他不會自動幫你偵測，有安裝在D槽的人記得更改路徑，steam版本要勾選下面選項，剩下基本上一直下一步就好。</p>
-                                <a href="image/xl install 03.jpg" target="_blank"><img src="image/xl install 03.jpg" class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a> 
+                                <a href="image/xl install 03.jpg" target="_blank"><img src="image/xl install 03.jpg"
+                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy"></a>
                                 <p class="mb-5 mx-5">紅框處可以記憶其他帳號，如果勾選自動登入，Loading畫面按住Shift即可</p>
                             </div>
                         </div>
@@ -73,9 +103,11 @@
                         <div class="accordion-body">
                             <div class="mx-auto text-center">
                                 <p class="mx-5">一般設定</p>
-                                <a href="image/xl setting 01.jpg" target="_blank"><img src="image/xl setting 01.jpg" class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
+                                <a href="image/xl setting 01.jpg" target="_blank"><img src="image/xl setting 01.jpg"
+                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
                                 <p class="mx-5">外觀設定</p>
-                                <a href="image/xl setting 02.jpg" target="_blank"><img src="image/xl setting 02.jpg" class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
+                                <a href="image/xl setting 02.jpg" target="_blank"><img src="image/xl setting 02.jpg"
+                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
                                 <p class="mx-5">後面兩個一個是頂部的bar，遊戲內可使用"/xldev"呼叫出一個頂部控制bar，最後一個標籤是使用正在測試中未上架的插件。</p>
                             </div>
                         </div>
@@ -94,7 +126,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
+    </script>
 </body>
 
 </html>
