--- a/plugins_ui.html
+++ b/plugins_ui.html
@@ -28,6 +28,7 @@
         <!-- CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     </head>
 
 <body>
@@ -76,22 +77,22 @@
     </nav>
     <!-- 文章內容 -->
     <div class="col-md-8 col-lg-9 my-5 px-5">
-        <div class="commonFormat pt-5"  id="chatBubbles">
+        <div class="commonFormat mt-5"  id="chatBubbles">
             <h6 class="fs-4">Chat Bubbles</h6>
             <p>顯示玩家說話時頭頂的泡泡，也可用於RP店分辨誰在說話，設定可隱藏自己的泡泡</p>
             <img src="https://github.com/Haplo064/ChatBubbles/blob/main/ChatBubbles/images/image1.png?raw=true" alt="" class="img-fluid" width="500">
         </div>
-        <div class="commonFormat pt-5"  id="BigPlayerDebuffs">
+        <div class="commonFormat mt-5"  id="BigPlayerDebuffs">
             <h6 class="fs-4">BigPlayerDebuffs</h6>
             <p>讓自己的Debuff變超大</p>
             <img src="https://github.com/rgd87/BigPlayerDebuffs/blob/master/images/image1.png?raw=true" alt="" class="img-fluid">
         </div>
-        <div class="commonFormat pt-5"  id="RezPls">
+        <div class="commonFormat mt-5"  id="RezPls">
             <h6 class="fs-4">RezPls</h6>
             <p>能夠顯示地上屍體誰正在拉或已經被拉起</p>
             <img src="image/rez01.jpg" alt="" class="img-fluid">
         </div>
-        <div class="commonFormat pt-5"  id="ChatCoordinates">
+        <div class="commonFormat mt-5"  id="ChatCoordinates">
             <h6 class="fs-4">ChatCoordinates</h6>
             <p>輸入座標後會自動在地圖立旗與聊天欄輸出座標
                 <br>
@@ -110,6 +111,10 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    
 </body>
 
 </html>
