--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -127,6 +128,7 @@
     <script>
         AOS.init();
     </script>
+    <script src="https://kit.fontawesome.com/f82903dd99.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
