完善插件頁面架構

--- a/plugins_cup.html
+++ b/plugins_cup.html
@@ -42,22 +42,10 @@
 
             <!-- 文章內容 -->
             <div class="col-md-8 col-lg-9 my-5 px-5">
-                <div class="commonFormat mt-5" id="chatBubbles">
-                    <h6 class="fs-4">Chat Bubbles</h6>
-                    <p>顯示玩家說話時頭頂的泡泡，也可用於RP店分辨誰在說話，設定可隱藏自己的泡泡</p>
-                    <img src="https://github.com/Haplo064/ChatBubbles/blob/main/ChatBubbles/images/image1.png?raw=true"
-                        alt="" class="img-fluid" width="500">
-                </div>
-                <div class="commonFormat mt-5" id="BigPlayerDebuffs">
-                    <h6 class="fs-4">BigPlayerDebuffs</h6>
-                    <p>讓自己的Debuff變超大</p>
-                    <img src="https://github.com/rgd87/BigPlayerDebuffs/blob/master/images/image1.png?raw=true" alt=""
-                        class="img-fluid">
-                </div>
-                <div class="commonFormat mt-5" id="RezPls">
-                    <h6 class="fs-4">RezPls</h6>
-                    <p>能夠顯示地上屍體誰正在拉或已經被拉起</p>
-                    <img src="image/rez01.jpg" alt="" class="img-fluid">
+                <div class="commonFormat mt-5" id="sonar">
+                    <h6 class="fs-4">Sonar</h6>
+                    <p>fjdkslfjdkslfjlds</p>
+                    <img src="" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
