--- a/plugins_map.html
+++ b/plugins_map.html
@@ -42,22 +42,13 @@
 
             <!-- 文章內容 -->
             <div class="col-md-8 col-lg-9 my-5 px-5">
-                <div class="commonFormat mt-5" id="chatBubbles">
-                    <h6 class="fs-4">Chat Bubbles</h6>
-                    <p>顯示玩家說話時頭頂的泡泡，也可用於RP店分辨誰在說話，設定可隱藏自己的泡泡</p>
-                    <img src="https://github.com/Haplo064/ChatBubbles/blob/main/ChatBubbles/images/image1.png?raw=true"
-                        alt="" class="img-fluid" width="500">
-                </div>
-                <div class="commonFormat mt-5" id="BigPlayerDebuffs">
-                    <h6 class="fs-4">BigPlayerDebuffs</h6>
-                    <p>讓自己的Debuff變超大</p>
-                    <img src="https://github.com/rgd87/BigPlayerDebuffs/blob/master/images/image1.png?raw=true" alt=""
-                        class="img-fluid">
-                </div>
-                <div class="commonFormat mt-5" id="RezPls">
-                    <h6 class="fs-4">RezPls</h6>
-                    <p>能夠顯示地上屍體誰正在拉或已經被拉起</p>
-                    <img src="image/rez01.jpg" alt="" class="img-fluid">
+                <div class="commonFormat mt-5" id="ChatCoordinates">
+                    <h6 class="fs-4">ChatCoordinates</h6>
+                    <p>輸入座標後會自動在地圖立旗與聊天欄輸出座標
+                        <br>
+                        /coord x座標 y座標 [地圖名稱] 地圖名稱可省略
+                    </p>
+                    <img src="image/chatcoordinates.jpg" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
