--- a/plugins_song.html
+++ b/plugins_song.html
@@ -42,22 +42,15 @@
 
             <!-- 文章內容 -->
             <div class="col-md-8 col-lg-9 my-5 px-5">
-                <div class="commonFormat mt-5" id="chatBubbles">
-                    <h6 class="fs-4">Chat Bubbles</h6>
-                    <p>顯示玩家說話時頭頂的泡泡，也可用於RP店分辨誰在說話，設定可隱藏自己的泡泡</p>
-                    <img src="https://github.com/Haplo064/ChatBubbles/blob/main/ChatBubbles/images/image1.png?raw=true"
-                        alt="" class="img-fluid" width="500">
+                <div class="commonFormat mt-5" id="simpleTweaks">
+                    <h6 class="fs-4">Simple Tweaks</h6>
+                    <p>便利小插件合集(待更新)</p>
+                    <img src="https://camo.githubusercontent.com/70f38df3ae6e9634ee26423624adb6bb2a7aaa5c21527375fa65f69b3c4a3979/68747470733a2f2f692e696d6775722e636f6d2f4f70684c7632452e706e67" alt="" class="img-fluid">
                 </div>
-                <div class="commonFormat mt-5" id="BigPlayerDebuffs">
-                    <h6 class="fs-4">BigPlayerDebuffs</h6>
-                    <p>讓自己的Debuff變超大</p>
-                    <img src="https://github.com/rgd87/BigPlayerDebuffs/blob/master/images/image1.png?raw=true" alt=""
-                        class="img-fluid">
-                </div>
-                <div class="commonFormat mt-5" id="RezPls">
-                    <h6 class="fs-4">RezPls</h6>
-                    <p>能夠顯示地上屍體誰正在拉或已經被拉起</p>
-                    <img src="image/rez01.jpg" alt="" class="img-fluid">
+                <div class="commonFormat mt-5" id="ezFauxHollows">
+                    <h6 class="fs-4">ezFauxHollows</h6>
+                    <p>幻想盤翻牌子提示</p>
+                    <img src="https://github.com/daemitus/FauxHollowsSolver/raw/master/res/demo.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
