分離一個戰鬥相關頁面，增加插件

--- a/plugins_cup.html
+++ b/plugins_cup.html
@@ -67,6 +67,10 @@
                     <img src="https://github.com/MgAl2O4/FFTriadBuddyDalamud/raw/main/assets/image3.png" alt="" class="img-fluid imagebigback">
                     <P>告訴你卡片要去哪裡拿，點選按鈕幫你插旗</P>
                 </div>
+                <div class="commonFormat mt-5" id="Tourist">
+                    <h6 class="fs-4">Tourist</h6>
+                    <p>探索筆記解答+插旗</p>
+                </div>
             </div>
         </div>
     </div>
