--- a/plugins_song.html
+++ b/plugins_song.html
@@ -44,24 +44,36 @@
             <div class="col-md-8 col-lg-9 my-sm-5 px-5 imagebig">
                 <div class="commonFormat mt-5" id="simpleTweaks">
                     <h6 class="fs-4">Simple Tweaks</h6>
-                    <p>便利小插件合集(待更新)</p>
-                    <img src="https://camo.githubusercontent.com/70f38df3ae6e9634ee26423624adb6bb2a7aaa5c21527375fa65f69b3c4a3979/68747470733a2f2f692e696d6775722e636f6d2f4f70684c7632452e706e67" alt="" class="img-fluid imagebigback mb-2">
+                    <p>便利小插件合集，<a href="https://github.com/Caraxi/SimpleTweaksPlugin">部分使用說明(插件網址)</a></p>
+
                     <div class="row">
                         <div class="col-md-6 text-center">
                             <a href="image/tweak01.jpg" target="_blank">
                             <img src="image/tweak01.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
                         </div>
                         <div class="col-md-6 text-center">
-                            <a href="image/tweak01.jpg" target="_blank">
+                            <a href="image/tweak02.jpg" target="_blank">
                             <img src="image/tweak02.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
                         </div>
                         <div class="col-md-6 text-center">
-                            <a href="image/tweak01.jpg" target="_blank">
+                            <a href="image/tweak03.jpg" target="_blank">
                             <img src="image/tweak03.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
                         </div>
                         <div class="col-md-6 text-center">
-                            <a href="image/tweak01.jpg" target="_blank">
+                            <a href="image/tweak07.jpg" target="_blank">
+                            <img src="image/tweak07.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                        </div>
+                        <div class="col-md-6 text-center">
+                            <a href="image/tweak04.jpg" target="_blank">
                             <img src="image/tweak04.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                        </div>
+                        <div class="col-md-6 text-center">
+                            <a href="image/tweak05.jpg" target="_blank">
+                            <img src="image/tweak05.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
+                        </div>
+                        <div class="col-md-6 text-center">
+                            <a href="image/tweak06.jpg" target="_blank">
+                            <img src="image/tweak06.jpg" alt="" class="img-fluid mb-2 imgnoJq" width="100%"></a>
                         </div>
                     </div>
                 </div>
@@ -94,12 +106,11 @@
                     "/pmb"打開查價介面，滑鼠移到物品上即可查詢價格</p>
                     <img src="image/xl setting 05.jpg" alt="" class="img-fluid imagebigback">
                 </div>
-                <div class="commonFormat mt-5" id="combo">
-                    <h6 class="fs-4">XIV Combo Plugin</h6>
-                    <p>讓連續的技能放在同一個技能欄中，改成combo模式<br>
-                    職業分開設定，可自行勾選哪個技能要使用這個效果<br>
-                    例如Draw on Play可以讓抽牌跟發牌使用同一個按鍵，快捷欄圖案會變成5抽牌的圖案。</p>
-                    <img src="image/xl setting 06.jpg" alt="" class="img-fluid imagebigback">
+                <div class="commonFormat mt-5" id="Housemate">
+                    <h6 class="fs-4">Housemate</h6>
+                    <p>顯示室內外裝修道具的名字</p>
+                    <a href="image/xl setting 12.png" target="_blank">
+                    <img src="image/xl setting 12.png" alt="" class="img-fluid imagebigback"></a>
                 </div>
             </div>
         </div>
