--- a/plugins_ui.html
+++ b/plugins_ui.html
@@ -50,22 +50,15 @@
                     <img src="https://github.com/Haplo064/ChatBubbles/blob/main/ChatBubbles/images/image1.png?raw=true"
                         alt="" class="img-fluid imagebigback">
                 </div>
-                <div class="commonFormat mt-5" id="BigPlayerDebuffs">
-                    <h6 class="fs-4">BigPlayerDebuffs</h6>
-                    <p>讓自己的Debuff變超大</p>
-                    <img src="https://github.com/rgd87/BigPlayerDebuffs/blob/master/images/image1.png?raw=true" alt=""
-                        class="img-fluid imagebigback">
-                </div>
-                <div class="commonFormat mt-5" id="RezPls">
-                    <h6 class="fs-4">RezPls</h6>
-                    <p>能夠顯示地上屍體誰正在拉或已經被拉起</p>
-                    <img src="image/rez01.jpg" alt="" class="img-fluid imagebigback">
-                </div>
                 <div class="commonFormat mt-5" id="Visibility">
                     <h6 class="fs-4">Visibility</h6>
                     <p>取消顯示其他玩家、寵物、召喚獸或路型鳥(有中文介面)<br>
                     "/pvis"呼叫設定介面</p>
                     <img src="image/xl setting 03.jpg" alt="" class="img-fluid imagebigback">
+                </div>
+                <div class="commonFormat mt-5" id="Glamaholic">
+                    <h6 class="fs-4">Glamaholic</h6>
+                    <p>解放投影模板數量限制</p>
                 </div>
             </div>
         </div>
