--- a/index.html
+++ b/index.html
@@ -21,12 +21,24 @@
     <meta property="twitter:title" content="亞馬烏羅提後花園">
     <meta property="twitter:description" content="Dalamud的各種研究筆記">
     <meta property="twitter:image" content="https://i.imgur.com/tcf5eaU.png">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GK80CEHHB"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4GK80CEHHB');
+    </script>
+
     <link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <link href="css/all.css" rel="stylesheet">
-    <title>亞馬烏羅提後花園</title>
     <!-- CSS -->
+    <link href="css/all.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+    <title>亞馬烏羅提後花園</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
@@ -36,14 +48,14 @@
     <!-- header -->
     <script src="head.js"></script>
     <!-- 內容 -->
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div class="px-4 pt-5 my-2 text-center ">
+            <div class="px-4 pt-5 my-5 text-center indexbanner">
                 <h1 class="display-4 mt-5 fw-bold">Dalamud</h1>
                 <div class="col-lg-8 mx-auto">
                     <p class="lead mb-4">所有插件的基底，功能包含快速啟動與更新、第三方插件管理、記憶多組帳號密碼、上傳交易板價格資料至Universalis等多項功能</p>
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-2">
-                        <a type="button" class="btn btn-primary btn-lg px-4 me-sm-3"
+                        <a type="button" class="btn btn-primary btn-lg px-4 me-sm-3 downloadbtn"
                             href="https://github.com/goatcorp/FFXIVQuickLauncher/releases"
                             target="_blank">下載Dalamud(github)</a>
                         <a type="button" class="btn btn btn-secondary btn-lg px-4"
