--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
     </script>
 
     <link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- CSS -->
-    <link href="css/all.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
-    <title>亞馬烏羅提後花園</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+    <link href="css/all.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+
+    <title>亞馬烏羅提後花園</title>
+
 </head>
 
 <body>
@@ -55,12 +57,16 @@
                 <div class="col-lg-8 mx-auto">
                     <p class="lead mb-4">所有插件的基底，功能包含快速啟動與更新、第三方插件管理、記憶多組帳號密碼、上傳交易板價格資料至Universalis等多項功能</p>
                     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-2">
-                        <a type="button" class="btn btn-primary btn-lg px-4 me-sm-3 downloadbtn"
+                        <div class="btnfather">
+                        <a type="button" class="btn btn-primary btn-lg px-4 downloadbtn"
                             href="https://github.com/goatcorp/FFXIVQuickLauncher/releases"
                             target="_blank">下載Dalamud(github)</a>
-                        <a type="button" class="btn btn btn-secondary btn-lg px-4"
+                        </div>
+                        <div class="btnfather">
+                        <a type="button" class="btn btn btn-secondary btn-lg px-4 downloadbtn cn"
                             href="https://bbs.tggfl.com/topic/32/dalamud-%E5%8D%AB%E6%9C%88%E6%A1%86%E6%9E%B6"
                             target="_blank">CN版介紹</a>
+                        </div>
                     </div>
                     <div class="alert alert alert-light mb-4" role="alert">
                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
