--- a/plugins_ui.html
+++ b/plugins_ui.html
@@ -22,14 +22,16 @@
     <meta property="twitter:description" content="Dalamud的各種研究筆記">
     <meta property="twitter:image" content="https://i.imgur.com/tcf5eaU.png">
     <link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <title>亞馬烏羅提後花園</title>
-
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <link href="css/all.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+
+    <title>亞馬烏羅提後花園</title>
 
 
 </head>
