--- a/plugins_att.html
+++ b/plugins_att.html
@@ -23,6 +23,14 @@
     <meta property="twitter:image" content="https://i.imgur.com/tcf5eaU.png">
     <link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon">
 
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    
+        gtag('config', 'G-4GK80CEHHB');
+        </script>
+
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
