--- a/plugins_map.html
+++ b/plugins_map.html
@@ -21,6 +21,13 @@
     <meta property="twitter:title" content="亞馬烏羅提後花園">
     <meta property="twitter:description" content="Dalamud的各種研究筆記">
     <meta property="twitter:image" content="https://i.imgur.com/tcf5eaU.png">
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    
+        gtag('config', 'G-4GK80CEHHB');
+        </script>
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
