--- a/plugins_ui.html
+++ b/plugins_ui.html
@@ -22,13 +22,7 @@
     <meta property="twitter:description" content="Dalamud的各種研究筆記">
     <meta property="twitter:image" content="https://i.imgur.com/tcf5eaU.png">
     <link rel="shortcut icon" href="./image/favicon.ico" type="image/x-icon">
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-    
-        gtag('config', 'G-4GK80CEHHB');
-        </script>
+
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -43,6 +37,15 @@
 
 </head>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4GK80CEHHB"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-4GK80CEHHB');
+    </script>
 <body>
     <!-- header -->
     <script src="head.js"></script>
