新增第三方插件的方法、房屋懸空插件

--- a/index.html
+++ b/index.html
@@ -133,6 +133,30 @@
                         </div>
                     </div>
                 </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            加載第三方程式庫方法
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse autoopen" aria-labelledby="headingThree"
+                        data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <div class="mx-auto text-center">
+                                <p class="mx-5">安裝插件版程式前，請先確認是否有安裝同作者同功能的獨立版程式，<a href="https://github.com/LeonBlade/DalamudPlugins">詳細請見此</a><br>
+                                確保在啟動器設置中打開“啟用遊戲內功能”以訪問遊戲內命令和功能！(可使用"/xlplugins"等指令)</p>
+                                <a href="image/moreplugins01.jpg" target="_blank"><img src="image/moreplugins01.jpg"
+                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
+                                <p class="mx-5">到Dalamud設定介面的最後一個標籤頁，URL的地方貼上第三方程式庫的位址，按一下"+"<br>
+                                Enabled那欄會變成"√"</p>
+                                <a href="image/moreplugins02.jpg" target="_blank"><img src="image/moreplugins02.jpg"
+                                        class="img-fluid border rounded-3 mb-3" alt="" loading="lazy" width="700"></a>
+                                <p class="mx-5">回到插件管理頁面，會發現多了新增的插件，此時需要點擊安裝，即可使用。</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
