--- a/plugins_ui.html
+++ b/plugins_ui.html
@@ -39,7 +39,6 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <link href="css/all.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
 
     <title>亞馬烏羅提後花園</title>
 
@@ -72,6 +71,11 @@
                 <div class="commonFormat mt-5" id="Glamaholic">
                     <h6 class="fs-4">Glamaholic</h6>
                     <p>解放投影模板數量限制</p>
+                </div>
+                <div class="commonFormat mt-5" id="GoodMemory">
+                    <h6 class="fs-4">GoodMemory</h6>
+                    <p>在物品底部區域標註是否已解鎖，只會出現在如樂譜、寵物等可以解鎖物品中。</p>
+                    <img src="image/xl setting 04.jpg" alt="" class="img-fluid imagebigback">
                 </div>
             </div>
         </div>
