--- a/plugins_song.html
+++ b/plugins_song.html
@@ -38,7 +38,6 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <link href="css/all.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
 
     <title>亞馬烏羅提後花園</title>
 </head>
@@ -107,11 +106,7 @@
                     <p>空想帳機率提示</p>
                     <img src="https://github.com/daemitus/WondrousTailsSolver/raw/master/res/demo.png" alt="" class="img-fluid imagebigback">
                 </div>
-                <div class="commonFormat mt-5" id="GoodMemory">
-                    <h6 class="fs-4">GoodMemory</h6>
-                    <p>在物品底部區域標註是否已解鎖，只會出現在如樂譜、寵物等可以解鎖物品中。</p>
-                    <img src="image/xl setting 04.jpg" alt="" class="img-fluid imagebigback">
-                </div>
+
                 <div class="commonFormat mt-5" id="market">
                     <h6 class="fs-4">Market Board plugin</h6>
                     <p>查詢物品價格，但需要玩家有打開板子更新價格，準確度取決於伺服器使用Dalamud的人數<br>
@@ -123,6 +118,14 @@
                     <p>顯示室內外裝修道具的名字</p>
                     <a href="image/xl setting 12.png" target="_blank">
                     <img src="image/xl setting 12.png" alt="" class="img-fluid imagebigback"></a>
+                </div>
+                <div class="commonFormat mt-5" id="BDTH">
+                    <h6 class="fs-4">BDTHPlugin</h6>
+                    <p>自訂家具位置，此插件需從第三方插件庫加載，詳細請見<a href="index.html#headingThree" target="_blank" class="moreplugin">安裝方法</a>
+                    <br>
+                    使用方式參照<a href="https://bbs.tggfl.com/topic/54/burning-down-the-house" target="_blank">獺爹教學</a></p>
+                    <a href="image/xl setting 12.png" target="_blank">
+                    <img src="https://camo.githubusercontent.com/a6b2506f0ffa053c7807feed4ecf4e2f368b5fc30ec5815d56e6e37085ce18af/68747470733a2f2f692e696d6775722e636f6d2f41647a6e55794a2e706e67" alt="" class="img-fluid imagebigback"></a>
                 </div>
             </div>
         </div>
