修改家具插件使用方法

--- a/plugins_song.html
+++ b/plugins_song.html
@@ -123,7 +123,11 @@
                     <h6 class="fs-4">BDTHPlugin</h6>
                     <p>自訂家具位置，此插件需從第三方插件庫加載，詳細請見<a href="index.html#headingThree" target="_blank" class="moreplugin">安裝方法</a>
                     <br>
-                    使用方式參照<a href="https://bbs.tggfl.com/topic/54/burning-down-the-house" target="_blank">獺爹教學</a></p>
+                    使用方式參照<a href="https://bbs.tggfl.com/topic/54/burning-down-the-house" target="_blank">獺爹教學</a>
+                    <br>
+                    進入旋轉模式，選中某家具，調整坐標。<br>
+                    調整後確認位置，不需要在旋轉模式微調家具。<br>
+                    請在進入房屋前啟用插件，否則請退出後重新進入一下。</p>
                     <a href="image/xl setting 12.png" target="_blank">
                     <img src="https://camo.githubusercontent.com/a6b2506f0ffa053c7807feed4ecf4e2f368b5fc30ec5815d56e6e37085ce18af/68747470733a2f2f692e696d6775722e636f6d2f41647a6e55794a2e706e67" alt="" class="img-fluid imagebigback"></a>
                 </div>
